fixed button overlap

--- a/home.css
+++ b/home.css
@@ -30,7 +30,7 @@ canvas {
     border: solid 2px #e15339;
     padding: 16px 22px;
     margin-left: 10px;
-    font-size: 14px;
+    font-size: 13px;
     text-decoration: none;
 text-transform: uppercase;
 }
